config/server/example/openshift/route/api-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: mwrite-peer-review-dev-api
  namespace: mwrite-peer-review-dev
spec:
  host: api.peer-review-nonprod.mwrite.openshift.dsc.umich.edu
  port:
    targetPort: 8000-tcp
  to:
    kind: Service
    name: mwrite-peer-review-dev-api
    weight: 100
  wildcardPolicy: None
  tls:
    certificate: <...redacted...>
    insecureEdgeTerminationPolicy: Redirect
    key: <...redacted...>
    termination: edge
