config/server/example/openshift/route/frontend-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: mwrite-peer-review-dev-frontend
  namespace: mwrite-peer-review-dev
spec:
  host: peer-review-nonprod.mwrite.openshift.dsc.umich.edu
  port:
    targetPort: 80-tcp
  to:
    kind: Service
    name: mwrite-peer-review-dev-frontend
    weight: 100
  wildcardPolicy: None
  tls:
    certificate: <...redacted...>
    insecureEdgeTerminationPolicy: Redirect
    key: <...redacted...>
    termination: edge
